<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Launcher"
    android:background="@drawable/fondo_cuatro"
    android:orientation="vertical"
    android:weightSum="3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/titulo"
        android:textSize="@dimen/space_xxl"
        android:gravity="center_horizontal"
        android:textColor="#212121"
        android:textStyle="bold"
        android:padding="@dimen/space_sm"
        />

    <Button
        android:id="@+id/tramite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:drawableRight="@drawable/pen2"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/b1"
        android:textColor="@color/launcherBg"
        android:textSize="30dp" />

    <Button

        android:id="@+id/universidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        android:textColor="@color/launcherBg"
        android:text="@string/b2"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="25dp"
        android:layout_below="@id/tramite"
        android:background="@drawable/button2"
        android:drawableRight="@drawable/book2"

        />
    <Button
        android:id="@+id/sabias"
        android:layout_width="match_parent"

        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="15dp"
        android:textColor="@color/launcherBg"
        android:text="@string/b3"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="25dp"
        android:layout_below="@id/universidad"
        android:background="@drawable/button3"
        android:drawableRight="@drawable/question"

        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b4"
            android:id="@+id/cerrarSesión"
            android:layout_gravity="center"
            android:onClick="logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:background="?android:selectableItemBackground"/>





</LinearLayout>